<resources>
    <string name="app_name">My Simple Journal</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae interdum tellus. Nunc eu dui leo. Cras rhoncus, nisl et finibus hendrerit, magna diam dapibus ex, eget congue nisi justo sed est. Nam vitae aliquam felis. Etiam consectetur nunc non libero elementum, a efficitur velit egestas. Mauris cursus, orci eu blandit mattis, odio elit convallis lacus, sed commodo velit erat luctus arcu. Pellentesque ac odio sit amet neque luctus ornare. Praesent euismod nisl libero, non accumsan tellus facilisis non. Donec at est sit amet nulla ornare laoreet vitae vel urna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus viverra consequat eros, ac lobortis arcu.\n\nQuisque porttitor pellentesque pretium. Cras sodales vulputate leo, ut tempor neque pretium vitae. Mauris ultrices, mi non aliquet congue, est est dapibus nunc, vel bibendum ligula urna feugiat tellus. Integer ultrices sit amet leo efficitur semper. Maecenas porta ipsum nec velit luctus tincidunt. Mauris magna ligula, dictum vel sollicitudin vel, malesuada et ipsum. Suspendisse efficitur sem a quam consequat, ut semper lorem scelerisque. Vestibulum pellentesque, sem quis accumsan venenatis, nibh magna posuere tortor, in interdum lectus neque sed odio. In commodo vitae felis ut ultricies. Phasellus ipsum ex, vulputate eleifend facilisis sed, varius sit amet sapien. Duis at neque ut risus rutrum egestas.\n\nDonec quis fermentum eros. Ut sed odio vitae erat cursus dictum eu in massa. Etiam enim eros, maximus vitae sapien vel, fringilla pretium neque. In hac habitasse platea dictumst. Duis feugiat, purus a scelerisque pharetra, risus sem dictum metus, placerat tempor libero ex et odio. Aenean tempus molestie pretium. Morbi scelerisque quis quam eget mattis. Sed faucibus nisi vel turpis fringilla egestas. In hac habitasse platea dictumst. Ut vulputate dui at erat egestas elementum. Cras non laoreet felis. Integer non eleifend lorem, et eleifend massa. Donec eget mattis turpis, posuere venenatis erat. Integer eleifend nibh id sodales dictum. Sed cursus ultrices neque, non gravida enim consectetur sed.\n\nInterdum et malesuada fames ac ante ipsum primis in faucibus. Praesent eros mauris, lacinia nec interdum nec, imperdiet sit amet nulla. Nulla aliquet nunc venenatis finibus pretium. Proin aliquam ligula quis sapien vehicula, ut maximus eros rutrum. Cras lacus velit, sagittis in magna ac, efficitur sodales dolor. Praesent sit amet interdum justo. Phasellus cursus dui id tristique ornare. Duis nec fringilla justo. Curabitur non sem nec sem feugiat interdum.\n\nDonec porttitor, felis sit amet ornare maximus, neque tortor elementum neque, a interdum justo mi nec ipsum. Phasellus interdum mi lacus, consequat egestas nulla viverra aliquet. Pellentesque vel ipsum mattis libero feugiat imperdiet a in erat. Maecenas eros mi, aliquam sit amet dictum sit amet, iaculis fermentum risus. Proin at tellus sed orci ultrices vehicula. Integer posuere ante quis mi faucibus accumsan. Suspendisse pretium elit et consectetur molestie. Suspendisse vitae odio lorem. Integer eu odio hendrerit, mattis risus at, placerat dolor.</string>
    <string name="hdr_backup_sync">Backup &amp; Sync</string>
    <string name="lbl_drive_backup">Google Drive Backup</string>
    <string name="desc_drive_backup">Back up all your entries automatically to a Google Drive folder, so you never lose your memories.</string>
    <string name="toggle_enable_drive">Sync with Google Drive</string>
    <string name="toggle_enable_drive_desc">Securely back up your journal to your Google Drive App Folder</string>
    <string name="backup_details">Backup Details</string>
    <string name="btn_backup_now">Backup Now</string>
    <string name="btn_restore">Restore Now</string>
    <string name="btn_disconnect_drive">Disconnect Google Drive</string>
    <string name="hint_connected_as">Connected to: %1$s</string>
    <string name="hint_not_connected">Not connected</string>
    <string name="error_no_permission">Cannot access Google Drive. Please grant the required permissions.</string>
    <string name="state_syncing">Syncing… Do not close the app.</string>
    <string name="lbl_last_backup">Last backup: %1$s</string>
    <string name="error_network">Backup failed. Check your internet connection and try again.</string>
    <string name="permission_denied">Oops you just denied the permission</string>

</resources>