<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BackupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/surfaceContainer"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:title="@string/hdr_backup_sync"
            app:layout_collapseMode="pin"
            app:navigationIconTint="@color/onSurface"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.CardView.Filled"
                android:backgroundTint="@color/tertiaryContainer">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingEnd="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_drive_backup"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/desc_drive_backup"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="600dp"
                        android:backgroundTint="@color/surface"
                        style="@style/Widget.Material3.CardView.Filled">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="16dp"
                            android:src="@drawable/google_drive_logo"/>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="0dp"
                    android:paddingEnd="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:text="@string/toggle_enable_drive"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/toggle_enable_drive_desc"/>

                </LinearLayout>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="false"/>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:text="@string/backup_details"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_marginTop="16dp"
                    android:text="Name"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="14dp"
                    android:text="Varun S"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:text="E-mail Id"/>

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="oignorsuvbs@gmail.com"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:text="Last backup"/>

                <TextView
                    android:id="@+id/tv_last_backup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="14dp"
                    android:text="12/6/2025"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_backup_now"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:cornerRadius="12dp"
                    android:layout_weight="1"
                    android:text="@string/btn_backup_now" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_restore_now"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_weight="1"
                    app:cornerRadius="12dp"
                    android:text="@string/btn_restore" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
